# beautiful_nums

./: CMakeLists.txt  README.md
cmake/: settings.cmake  sources.cmake
include/: ComputingOfBeauty.hpp  main.hpp
src/: ComputingOfBeauty.cpp  main.cpp
